# AmorJiSe

./: AnnotGen.hs  Dockerfile  JST0P_constrain.hs  JST0P_solution.hs  JST0P_types.hs  JST0_ParseTest.hs  JST0_constrain.hs  JST0_solution.hs  JST0_type_aux.hs  JST0_types.hs  README.md  TypeInference.hs  playground.hs
AmorJiSe_project/: AmorJiSe.cabal  stack.yaml
AmorJiSe_project/src/: API_model.hs  AnnotGen.hs  Closure.hs  Conditionals.hs  ConstGen.hs  Debugging.hs  Extraction.hs  JST0P_constrain.hs  JST0P_context.hs  JST0P_solution.hs  JST0P_types.hs  JST0_constrain.hs  JST0_context.hs  JST0_solution.hs  JST0_types.hs  Maps.hs  Res_model.hs  Res_model_tests.hs  TypeInference.hs
